# mei_tools

./: 01_MEI_Updating_2025.ipynb  MEI_Metadata_2025.ipynb  MEI_Music_Feature_2025.ipynb  README.html  README.md  __init__.py  mei_metadata_processor.py  mei_music_feature_processor.py  meitools_Gesualdo_v1.ipynb  meitools_Gesualdo_v2.ipynb  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: MEI_Metadata_2025-checkpoint.ipynb
mei_metadata_processor/: __init__.py
mei_tools/: __init__.py  mei_definition_editor.py  mei_definition_processor.py  mei_metadata_processor.py  mei_music_feature_processor.py
